# OpenPyxlLesson

./: .gitignore  distrowatch_top_10.xlsx  pyproject.toml  reader.py  styles.py
