[tool.poetry]
name = "openpyxllesson"
version = "0.1.0"
description = ""
authors = ["rsaleev <rs.aleev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.9"
prettytable = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
